force-app/main/default/objects/Gespreksverslag__c/Gespreksverslag__c.object-meta.xml
<CustomObject>
    <label>Meeting Report</label>
    <nameField>
        <displayFormat>GV-{000000}</displayFormat>
        <label>Meeting Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>