force-app/main/default/objects/Gespreksverslag__c/fields/AccountPlanRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Gespreksverslagen</relationshipLabel>
    <relationshipName>Gespreksverslagen</relationshipName>
    <type>Lookup</type>
</CustomField>