force-app/main/default/objects/Gespreksverslag__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To what account is the meeting report related.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Reports</relationshipLabel>
    <relationshipName>Gespreksverslagen</relationshipName>
    <type>Lookup</type>
</CustomField>