force-app/main/default/objects/Gespreksverslag__c/fields/Acties__c.field-meta.xml
<CustomField>
    <fullName>Acties__c</fullName>
    <description>Verzameling van de acties. Wordt samengesteld door de flow: flow_Gespreksverslag_Taken</description>
    <label>Acties</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>