force-app/main/default/objects/Gespreksverslag__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who initiated this meeting report. External contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Reports</relationshipLabel>
    <relationshipName>Gespreksverslagen</relationshipName>
    <type>Lookup</type>
</CustomField>