force-app/main/default/objects/Gespreksverslag__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>What was the date of the meeting?</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>