force-app/main/default/objects/Gespreksverslag__c/fields/Deelnemers__c.field-meta.xml
<CustomField>
    <fullName>Deelnemers__c</fullName>
    <description>Flow genereert een lijst gebaseerd op de aanwezigen</description>
    <label>Deelnemers</label>
    <type>TextArea</type>
</CustomField>