force-app/main/default/objects/Gespreksverslag__c/fields/Gemaakte_afspraak__c.field-meta.xml
<CustomField>
    <fullName>Gemaakte_afspraak__c</fullName>
    <label>Gemaakte afspraak</label>
    <length>56</length>
    <type>Text</type>
</CustomField>