force-app/main/default/objects/Gespreksverslag__c/fields/Gespreksverslag__c.field-meta.xml
<CustomField>
    <fullName>Gespreksverslag__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id , AccountRef__r.Name +&apos; - &apos; + TEXT(Date__c) + &apos; &apos; + Text(Type__c), &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gespreksverslag</label>
    <type>Text</type>
</CustomField>