force-app/main/default/objects/Gespreksverslag__c/fields/Heijmans_imago__c.field-meta.xml
<CustomField>
    <fullName>Heijmans_imago__c</fullName>
    <label>Heijmans imago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>