force-app/main/default/objects/Gespreksverslag__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User can set this checkbox to make the meeting report private. Sharing is set with sharing rules.</description>
    <inlineHelpText>If you check this checkbox the meeting report will only be visible to you.</inlineHelpText>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>