force-app/main/default/objects/Gespreksverslag__c/fields/Markt__c.field-meta.xml
<CustomField>
    <fullName>Markt__c</fullName>
    <inlineHelpText>Over welke markt(en) gaat het (klant)gesprek. Hier zijn meerdere keuzes mogelijk</inlineHelpText>
    <label>Markt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobiliteit: A-wegen</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: N-wegen</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: Rail en OV</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: Hoofd-hubs</fullName>
            </value>
            <value>
                <fullName>Waterveiligheid</fullName>
            </value>
            <value>
                <fullName>Energie: Productie</fullName>
            </value>
            <value>
                <fullName>Energie: Hoofdtransport</fullName>
            </value>
            <value>
                <fullName>Energie: Distributie</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Binnenstedelijk</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Industrieel gebied</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Publieke Ruimte</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Afvalwater</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Drinkwater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>