force-app/main/default/objects/Gespreksverslag__c/fields/MeetingGoal__c.field-meta.xml
<CustomField>
    <fullName>MeetingGoal__c</fullName>
    <description>Brief summary what the goal of this meeting was.</description>
    <label>Meeting Goal</label>
    <length>254</length>
    <type>Text</type>
</CustomField>