force-app/main/default/objects/Gespreksverslag__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes related to the meeting report.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>