force-app/main/default/objects/Gespreksverslag__c/fields/ObjectiveRef__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Account_Plan_Objective__c</referenceTo>
    <relationshipLabel>Gespreksverslagen</relationshipLabel>
    <relationshipName>Gespreksverslagen</relationshipName>
    <type>Lookup</type>
</CustomField>