force-app/main/default/objects/Gespreksverslag__c/fields/OpportunityCloneRef__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCloneRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the old Opportunity object</description>
    <label>Opportunity</label>
    <referenceTo>OpportunityClone__c</referenceTo>
    <relationshipLabel>Meeting Reports (Opportunity)</relationshipLabel>
    <relationshipName>Meeting_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>