force-app/main/default/objects/Gespreksverslag__c/fields/Oppty__c.field-meta.xml
<CustomField>
    <fullName>Oppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oppty</label>
    <referenceTo>OpportunityClone__c</referenceTo>
    <relationshipName>Gespreksverslagen</relationshipName>
    <type>Lookup</type>
</CustomField>