force-app/main/default/objects/Gespreksverslag__c/fields/Organisatie_informatie__c.field-meta.xml
<CustomField>
    <fullName>Organisatie_informatie__c</fullName>
    <label>OUD Organisatie</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>