force-app/main/default/objects/Gespreksverslag__c/fields/PartnershipRef__c.field-meta.xml
<CustomField>
    <fullName>PartnershipRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is the meeting report related to a partnership?</description>
    <label>Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Meeting Reports</relationshipLabel>
    <relationshipName>Meeting_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>