force-app/main/default/objects/Gespreksverslag__c/fields/Problematiek__c.field-meta.xml
<CustomField>
    <fullName>Problematiek__c</fullName>
    <label>Problematiek</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>