force-app/main/default/objects/Gespreksverslag__c/fields/Projecten__c.field-meta.xml
<CustomField>
    <fullName>Projecten__c</fullName>
    <label>OUD Projecten</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>