force-app/main/default/objects/Gespreksverslag__c/fields/Propositie__c.field-meta.xml
<CustomField>
    <fullName>Propositie__c</fullName>
    <inlineHelpText>Zijn er proposities aan bod gekomen in het (klant)gesprek? Hier zijn meerdere keuzes mogelijk</inlineHelpText>
    <label>Propositie</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laadinfra</fullName>
            </value>
            <value>
                <fullName>Assetlife</fullName>
            </value>
            <value>
                <fullName>PV Cellen Gemeenten</fullName>
            </value>
            <value>
                <fullName>Toekomstbestendige Bedrijventerreinen</fullName>
            </value>
            <value>
                <fullName>Bloemkoolwijken</fullName>
            </value>
            <value>
                <fullName>Complexe Ondergronden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>