force-app/main/default/objects/Gespreksverslag__c/fields/Regio_Infra__c.field-meta.xml
<CustomField>
    <fullName>Regio_Infra__c</fullName>
    <formula>IF(INCLUDES(AccountRef__r.Regio_Infra__c,&quot;Zuid&quot;),&quot;Regio Zuid&quot;,
IF(INCLUDES(AccountRef__r.Regio_Infra__c,&quot;Zuid West&quot;),&quot;Regio Zuid West&quot;,
IF(INCLUDES(AccountRef__r.Regio_Infra__c,&quot;Noord West&quot;),&quot;Regio Noord West&quot;,
IF(INCLUDES(AccountRef__r.Regio_Infra__c,&quot;Midden Oost&quot;),&quot;Regio Midden Oost&quot;,
&quot;--&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Neem de Regio Infra over van de account</inlineHelpText>
    <label>Regio Infra</label>
    <type>Text</type>
</CustomField>