force-app/main/default/objects/Gespreksverslag__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>TEXT( AccountRef__r.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In welke sector (branche) is de account gelabeld?</inlineHelpText>
    <label>Sector</label>
    <type>Text</type>
</CustomField>