force-app/main/default/objects/Gespreksverslag__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategische samenwerking</fullName>
                <default>true</default>
                <label>Strategische samenwerking</label>
            </value>
            <value>
                <fullName>Strategische contract bespreking</fullName>
            </value>
            <value>
                <fullName>Acquisitie gesprek</fullName>
            </value>
            <value>
                <fullName>Relatie onderhoud</fullName>
            </value>
            <value>
                <fullName>Telefonisch Contact</fullName>
            </value>
            <value>
                <fullName>Openbare bijeenkomst</fullName>
            </value>
            <value>
                <fullName>KTO</fullName>
            </value>
            <value>
                <fullName>Project bezoek</fullName>
            </value>
            <value>
                <fullName>Bouwvergadering</fullName>
            </value>
            <value>
                <fullName>Overig</fullName>
            </value>
            <value>
                <fullName>Marktconsultatie</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Innovatie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>