force-app/main/default/objects/Gespreksverslag__c/fields/Verslag_gemaakt_door__c.field-meta.xml
<CustomField>
    <fullName>Verslag_gemaakt_door__c</fullName>
    <description>Flow vult het veld op basis van Aanwezige</description>
    <label>Verslag gemaakt door</label>
    <type>TextArea</type>
</CustomField>