force-app/main/default/objects/Gespreksverslag__c/fields/YearAndQuarterForm__c.field-meta.xml
<CustomField>
    <fullName>YearAndQuarterForm__c</fullName>
    <description>Year and quarter of the meeting report.</description>
    <formula>IF (MONTH(Date__c)&lt;4 , TEXT(YEAR(Date__c)) &amp;&quot;-Q1&quot; , IF (MONTH(Date__c)&lt;7 , TEXT(YEAR(Date__c )) &amp;&quot;-Q2&quot; , IF (MONTH(Date__c)&lt;10 , TEXT(YEAR(Date__c )) &amp;&quot;-Q3&quot; ,TEXT(YEAR(Date__c )) &amp;&quot;-Q4&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year and quarter of the meeting report.</inlineHelpText>
    <label>Year &amp; Quarter</label>
    <type>Text</type>
</CustomField>