force-app/main/default/objects/Gespreksverslag__c/fields/YearForm__c.field-meta.xml
<CustomField>
    <fullName>YearForm__c</fullName>
    <description>In what year did the meeting report took place?</description>
    <formula>TEXT(YEAR( Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>