force-app/main/default/objects/Gespreksverslag__c/recordTypes/MeetingReport.recordType-meta.xml
<RecordType>
    <fullName>MeetingReport</fullName>
    <active>true</active>
    <description>Standard meeting report</description>
    <label>Meeting Report</label>
</RecordType>