force-app/main/default/objects/Gespreksverslag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Gespreksverslag__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Sector__c</columns>
    <columns>Date__c</columns>
    <columns>AccountRef__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>