force-app/main/default/objects/Gespreksverslag__c/listViews/Gespreksverslagen_Alle.listView-meta.xml
<ListView>
    <fullName>Gespreksverslagen_Alle</fullName>
    <columns>Gespreksverslag__c</columns>
    <columns>Date__c</columns>
    <columns>Organisatie_informatie__c</columns>
    <columns>Notes__c</columns>
    <columns>MeetingGoal__c</columns>
    <columns>AccountRef__c</columns>
    <columns>Oppty__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Gespreksverslagen - Alle</label>
</ListView>