force-app/main/default/objects/Gespreksverslag__c/listViews/Mijn_gespreksverslagen_Afgelopen_2_wkn.listView-meta.xml
<ListView>
    <fullName>Mijn_gespreksverslagen_Afgelopen_2_wkn</fullName>
    <columns>Gespreksverslag__c</columns>
    <columns>YearAndQuarterForm__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>AccountRef__c</columns>
    <columns>PartnershipRef__c</columns>
    <columns>MeetingGoal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsPrivate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Gespreksverslag__c.MeetingReport</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>Mijn gespreksverslagen - Afgelopen 2 wkn</label>
</ListView>